--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -28,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="message"
+        android:textColor="@color/black"
         android:gravity="center"/>
 
     <androidx.appcompat.widget.AppCompatButton
