--- a/app/src/main/res/layout/fragment_recharge_receipt.xml
+++ b/app/src/main/res/layout/fragment_recharge_receipt.xml
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_semibold"
-                android:text="@string/txt_deposit_confirm_success"
+                android:text="Recarga efeutada com sucesso!"
                 android:textAlignment="center"
                 android:textColor="@color/color_deposit_confirm"
                 android:textSize="22sp"
@@ -84,9 +84,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/inter"
-                android:text="Seu depósito ficará disponível em até 24 horas."
-                android:textAlignment="center"
+                android:text="Sua recarga estará disponível em alguns minutos."
                 android:textColor="@color/black"
+                android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/inter_bold"
-                android:text="Detalhe da transação"
+                android:text="Detalhe da recarga"
                 android:textColor="@color/black"
                 app:layout_constraintTop_toBottomOf="@+id/text_subTitle"
                 tools:layout_editor_absoluteX="16dp" />
@@ -106,7 +106,7 @@
 
             <!--            Date Transaction-->
             <TextView
-                android:id="@+id/date_deposit"
+                android:id="@+id/date_recharge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -116,7 +116,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/text_information_recharge_detail" />
 
             <TextView
-                android:id="@+id/text_date_deposit"
+                android:id="@+id/text_date_recharge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -135,31 +135,32 @@
                 android:text="Horário"
                 android:textColor="@color/blue_final"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_date_deposit" />
+                app:layout_constraintTop_toBottomOf="@+id/date_recharge" />
 
             <TextView
-                android:id="@+id/text_hour_deposit"
+                android:id="@+id/text_hour_recharge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/inter_semibold"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_date_deposit"
+                app:layout_constraintTop_toBottomOf="@+id/text_date_recharge"
                 tools:text="22:15" />
 
             <!--            Code Transaction-->
             <TextView
+                android:id="@+id/text_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Código da Transação"
+                android:text="Código da Recarga"
                 android:textColor="@color/blue_final"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_hour" />
 
             <TextView
-                android:id="@+id/text_code_deposit"
+                android:id="@+id/text_code_recharge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -167,7 +168,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
 
-                app:layout_constraintTop_toBottomOf="@+id/text_hour_deposit"
+                app:layout_constraintTop_toBottomOf="@+id/text_hour_recharge"
                 tools:text="jkhjnbdjibdvk541512241" />
 
             <View
@@ -175,11 +176,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/text_code_deposit"
+                app:layout_constraintTop_toBottomOf="@+id/text_code_recharge"
                 tools:layout_editor_absoluteX="16dp" />
 
             <!--            Code Transaction-->
             <TextView
+                android:id="@+id/text_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -189,20 +191,43 @@
                 app:layout_constraintTop_toBottomOf="@+id/view" />
 
             <TextView
-                android:id="@+id/text_amount_deposit"
+                android:id="@+id/text_amount_recharge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/inter_semibold"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/text_value"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/text_value"
+                tools:text="R$ 150,00" />
+
+            <!--            Number Phone-->
+            <TextView
+                android:id="@+id/text_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:text="Numero do Telefone"
+                android:textColor="@color/blue_final"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_value" />
+
+            <TextView
+                android:id="@+id/text_phone_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_semibold"
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/text_number"
 
-                app:layout_constraintTop_toBottomOf="@+id/view"
-                tools:text="R$ 150,00" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/text_number"
+                tools:text="(88) 9-9999-8888" />
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_confirmation_transaction"
+                android:id="@+id/btn_confirmation_recharge"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
