feature: criando logica de recarga de telefone

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
     
 
     <item
-        android:id="@+id/chargePhoneFragment"
+        android:id="@+id/rechargeFragment"
         android:icon="@drawable/ic_phone_line"
         android:title="Recarga Celular"
         android:iconTint="@color/color_nav_item"
