--- a/app/src/main/res/layout/fragment_recharge_receipt.xml
+++ b/app/src/main/res/layout/fragment_recharge_receipt.xml
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_semibold"
-                android:text="Recarga efeutada com sucesso!"
+                android:text="Recarga efetuada com sucesso!"
                 android:textAlignment="center"
                 android:textColor="@color/color_deposit_confirm"
                 android:textSize="22sp"
