--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,7 @@
     tools:context=".presenter.home.HomeFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,8 +23,7 @@
             android:layout_weight="1"
             android:background="@drawable/bg_top_left_home"
             android:orientation="vertical"
-            android:paddingVertical="0dp"
-            >
+            android:paddingVertical="0dp">
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -35,22 +35,21 @@
 
             android:background="@drawable/bg_top_right_home"
             android:orientation="vertical"
-            android:paddingVertical="0dp"
-            >
-
+            android:paddingVertical="0dp">
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 
-<!--    Main da HOME-->
+    <!--    Main da HOME-->
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/new_deposit"
+        android:layout_marginTop="16dp"
         android:fillViewport="true"
-        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,13 +65,14 @@
                 android:id="@+id/btn_logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
                 android:layout_marginEnd="12dp"
+                android:backgroundTint="@color/white"
                 android:contentDescription="botão de logout"
 
                 android:src="@drawable/ic_logout"
+                app:layout_constraintBottom_toBottomOf="@+id/text_title"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/text_title" />
 
             <TextView
                 android:id="@+id/text_title"
@@ -104,33 +104,44 @@
                     android:src="@drawable/profile_img" />
 
 
-
             </com.google.android.material.card.MaterialCardView>
-
 
 
             <TextView
                 android:id="@+id/text_user"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="86dp"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
                 app:layout_constraintStart_toEndOf="@+id/materialCardView"
+                app:layout_constraintTop_toBottomOf="@+id/text_title"
                 tools:text="nome do usuario" />
+
+            <TextView
+                android:id="@+id/account_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginStart="86dp"
+                android:fontFamily="@font/inter_semibold"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="@+id/text_user"
+                app:layout_constraintStart_toStartOf="@+id/text_user"
+                app:layout_constraintTop_toBottomOf="@+id/text_user"
+                tools:text="numero da conta" />
 
 
             <include
                 android:id="@+id/card_balance"
                 layout="@layout/card_balance"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="160dp"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/materialCardView"
-           />
+                app:layout_constraintTop_toBottomOf="@id/materialCardView" />
 
 
             <TextView
@@ -138,9 +149,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/inter_semibold"
                 android:text="Últimas 6 transações"
                 android:textColor="@color/blue_final"
-                android:fontFamily="@font/inter_semibold"
                 android:textStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/card_balance" />
@@ -149,9 +160,9 @@
                 android:id="@+id/btn_all_transactions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/inter_semibold"
                 android:text="Ver todas"
                 android:textColor="@color/blue_final"
-                android:fontFamily="@font/inter_semibold"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="@+id/text_last_transactions"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -159,10 +170,9 @@
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:cardCornerRadius="16dp"
+                android:layout_height="280dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:cardCornerRadius="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -186,12 +196,12 @@
                         android:id="@+id/tv_empty_transactions"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center"
                         android:text="Você ainda não realizou nenhuma transação."
+                        android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="16sp"
-                        android:gravity="center"
-                        android:visibility="gone"
-                        android:textAlignment="center" />
+                        android:visibility="gone" />
 
                     <ProgressBar
                         android:id="@+id/progress_bar"
@@ -199,9 +209,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:indeterminateTint="@color/white"
-                        tools:visibility="visible"
                         android:visibility="invisible"
-                        />
+                        tools:visibility="visible" />
                 </FrameLayout>
             </com.google.android.material.card.MaterialCardView>
 
@@ -211,18 +220,183 @@
     </androidx.core.widget.NestedScrollView>
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/new_deposit"
-        android:layout_width="wrap_content"
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
-        android:contentDescription="botão de novo deposito"
-        android:src="@drawable/ic_add_deposit"
-        app:tint="@color/blue_final"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:fillViewport="true"
+        android:paddingHorizontal="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_new_deposit"
+                android:layout_width="90dp"
+                android:layout_height="100dp"
+                app:cardCornerRadius="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue_final"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/ic_add_deposit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_add_deposit"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:tint="@color/white" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/inter_bold"
+                        android:text="Depositar"
+                        android:textColor="@color/white"
+
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_credit_card"
+                android:layout_width="90dp"
+                android:layout_height="100dp"
+                app:cardCornerRadius="16dp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/card_new_deposit"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue_final"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/ic_credit_card"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_credit_card"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:tint="@color/white" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/inter_bold"
+                        android:text="Cartão de crédito"
+                        android:textColor="@color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_payment"
+                android:layout_width="90dp"
+                android:layout_height="100dp"
+                app:cardCornerRadius="16dp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/card_credit_card"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue_final"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/ic_payment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_payment"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:tint="@color/white" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/inter_bold"
+                        android:text="Pagar Contas"
+                        android:textColor="@color/white"
+                        android:gravity="center"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_information_account"
+                android:layout_width="90dp"
+                android:layout_height="100dp"
+                app:cardCornerRadius="16dp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/card_payment"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/blue_final"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/ic_information_account"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:src="@drawable/ic_information_account"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:tint="@color/white" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/inter_bold"
+                        android:text="Conta"
+                        android:textColor="@color/white"
+
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </HorizontalScrollView>
 
 
 
