--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,8 +11,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/color_default">
+        android:layout_height="wrap_content"
+        android:background="@color/color_default"
+        >
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -62,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/linear_edit"
+            app:layout_constraintBottom_toTopOf="@+id/scrollView_form"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,146 +91,209 @@
         </LinearLayout>
 
 
-        <LinearLayout
-            android:id="@+id/linear_edit"
+        <ScrollView
+            android:id="@+id/scrollView_form"
             android:layout_width="match_parent"
             android:layout_height="480dp"
-            android:background="@drawable/bg_register_view"
-            android:orientation="vertical"
-            android:paddingHorizontal="24dp"
-            android:paddingVertical="14dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="@id/linear_text">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nome"
-                android:textColor="@color/color_default"
-                android:textStyle="bold" />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edit_name"
-                style="@style/Theme.EditText"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="10dp"
-                android:drawableStart="@drawable/ic_person"
-                android:drawableTint="@color/color_default"
-                android:hint="nome completo"
-                android:inputType="text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-            " />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Telefone"
-                android:textColor="@color/color_default"
-                android:textStyle="bold" />
-
-
-            <com.vicmikhailau.maskededittext.MaskedEditText
-                android:id="@+id/edit_phone"
-                style="@style/Theme.EditText"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="10dp"
-                android:drawableStart="@drawable/ic_phone"
-                android:hint="(99)99999-9999"
-                android:inputType="phone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                app:mask="(##) #-####-####" />
-            " />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="E-mail"
-                android:textColor="@color/color_default"
-                android:textStyle="bold" />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edit_email"
-                style="@style/Theme.EditText"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="10dp"
-                android:drawableStart="@drawable/ic_mail_line"
-                android:hint="digite seu email"
-                android:inputType="textEmailAddress"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-            " />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Senha"
-                android:textColor="@color/color_default"
-                android:textStyle="bold" />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edit_password"
-                style="@style/Theme.EditText"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="10dp"
-                android:drawableStart="@drawable/ic_lock_password_line"
-                android:hint="digite sua senha"
-                android:inputType="textPassword" />
-
-            <!--            <TextView-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text="Confirme a Senha"-->
-            <!--                android:textColor="@color/color_default"-->
-            <!--                android:textStyle="bold" />-->
-            <!--            -->
-
-            <!--            <androidx.appcompat.widget.AppCompatEditText-->
-            <!--                android:id="@+id/edit_confirm_password"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginTop="4dp"-->
-            <!--                android:layout_marginBottom="10dp"-->
-            <!--                android:background="@drawable/bg_edit"-->
-            <!--                android:drawableStart="@drawable/ic_password"-->
-            <!--                android:drawablePadding="10dp"-->
-            <!--                android:drawableTint="@color/color_default"-->
-            <!--                android:hint="Confirmar Senha"-->
-            <!--                android:inputType="textPassword"-->
-            <!--                android:padding="14dp"-->
-            <!--                android:textColorHint="@color/color_hint_default" />-->
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_create_account"
+            app:layout_constraintStart_toStartOf="@id/linear_text"
+            >
+            <LinearLayout
+                android:id="@+id/linear_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="14dp"
-                android:background="@drawable/bg_button_login"
-                android:text="Criar Conta"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+                android:background="@drawable/bg_register_view"
+                android:orientation="vertical"
+                android:paddingHorizontal="24dp"
+                android:paddingVertical="14dp"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nome"
+                    android:textColor="@color/color_default"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edit_name"
+                    style="@style/Theme.EditText"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="10dp"
+                    android:drawableStart="@drawable/ic_person"
+                    android:drawableTint="@color/color_default"
+                    android:hint="nome completo"
+                    android:inputType="text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+                " />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Telefone"
+                    android:textColor="@color/color_default"
+                    android:textStyle="bold" />
 
 
-            <ProgressBar
-                android:id="@+id/progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginVertical="10dp"
-                android:indeterminateTint="@color/color_default"
-                android:visibility="invisible"
-                tools:visibility="visible" />
-        </LinearLayout>
+                <com.vicmikhailau.maskededittext.MaskedEditText
+                    android:id="@+id/edit_phone"
+                    style="@style/Theme.EditText"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="10dp"
+                    android:drawableStart="@drawable/ic_phone"
+                    android:hint="(99)9-9999-9999"
+                    android:inputType="phone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+                    app:mask="(##) #-####-####" />
+                " />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CPF"
+                    android:textColor="@color/color_default"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edit_cpf"
+                    style="@style/Theme.EditText"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="10dp"
+                    android:drawableStart="@drawable/ic_dock"
+                    android:hint="123.456.789-00"
+                    android:inputType="number"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+                " />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="RG"
+                    android:textColor="@color/color_default"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edit_rg"
+                    style="@style/Theme.EditText"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="10dp"
+                    android:drawableStart="@drawable/ic_dock"
+                    android:hint="8.888.444"
+                    android:inputType="number"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+                " />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="E-mail"
+                    android:textColor="@color/color_default"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edit_email"
+                    style="@style/Theme.EditText"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="10dp"
+                    android:drawableStart="@drawable/ic_mail_line"
+                    android:hint="digite seu email"
+                    android:inputType="textEmailAddress"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+                " />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Senha aplicativo"
+                    android:textColor="@color/color_default"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edit_password"
+                    style="@style/Theme.EditText"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="10dp"
+                    android:drawableStart="@drawable/ic_lock_password_line"
+                    android:hint="digite sua senha"
+                    android:inputType="textPassword" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Senha de transação"
+                    android:textColor="@color/color_default"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edit_password_transaction"
+                    style="@style/Theme.EditText"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="10dp"
+                    android:drawableStart="@drawable/ic_lock_password_line"
+                    android:hint="digite sua senha"
+                    android:inputType="number" />
+
+                <!--            <TextView-->
+                <!--                android:layout_width="wrap_content"-->
+                <!--                android:layout_height="wrap_content"-->
+                <!--                android:text="Confirme a Senha"-->
+                <!--                android:textColor="@color/color_default"-->
+                <!--                android:textStyle="bold" />-->
+                <!--            -->
+
+                <!--            <androidx.appcompat.widget.AppCompatEditText-->
+                <!--                android:id="@+id/edit_confirm_password"-->
+                <!--                android:layout_width="match_parent"-->
+                <!--                android:layout_height="wrap_content"-->
+                <!--                android:layout_marginTop="4dp"-->
+                <!--                android:layout_marginBottom="10dp"-->
+                <!--                android:background="@drawable/bg_edit"-->
+                <!--                android:drawableStart="@drawable/ic_password"-->
+                <!--                android:drawablePadding="10dp"-->
+                <!--                android:drawableTint="@color/color_default"-->
+                <!--                android:hint="Confirmar Senha"-->
+                <!--                android:inputType="textPassword"-->
+                <!--                android:padding="14dp"-->
+                <!--                android:textColorHint="@color/color_hint_default" />-->
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_create_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="24dp"
+                    android:layout_marginTop="14dp"
+                    android:background="@drawable/bg_button_login"
+                    android:text="Criar Conta"
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
+
+
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginVertical="10dp"
+                    android:indeterminateTint="@color/color_default"
+                    android:visibility="invisible"
+                    tools:visibility="visible" />
+            </LinearLayout>
+        </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
