--- a/app/src/main/res/layout/fragment_credit_card.xml
+++ b/app/src/main/res/layout/fragment_credit_card.xml
@@ -10,7 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <include
             android:id="@+id/card_balance_front"
             layout="@layout/credit_card_front_item"
