--- a/app/src/main/res/layout/credit_card_front_item.xml
+++ b/app/src/main/res/layout/credit_card_front_item.xml
@@ -49,7 +49,7 @@
 
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/credit_card_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -62,6 +62,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
         <TextView
+            android:id="@+id/credit_card_valid_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="01/36"
@@ -84,7 +85,7 @@
             android:textSize="18sp"
             android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintTop_toBottomOf="@+id/credit_card_number" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
