--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -302,7 +302,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/inter_bold"
-                        android:text="Transferir"
+                        android:text="Tranferir"
                         android:textColor="@color/white"
                         android:gravity="center"
                         app:layout_constraintBottom_toBottomOf="parent"
