--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,27 +84,30 @@
                 android:textSize="32sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/btn_logout"
-                app:layout_constraintStart_toEndOf="@+id/materialCardView"
-                app:layout_constraintTop_toTopOf="@+id/materialCardView" />
+                app:layout_constraintStart_toEndOf="@+id/frame_profile"
+                app:layout_constraintTop_toTopOf="@+id/frame_profile" />
 
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/materialCardView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="40dp"
+            <FrameLayout
+                android:id="@+id/frame_profile"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/bg_image_around"
+                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/img_profile"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:background="@drawable/bg_image_around"
+                    android:clipToOutline="true"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/profile_img" />
 
 
-            </com.google.android.material.card.MaterialCardView>
+            </FrameLayout>
 
 
             <TextView
@@ -115,7 +118,7 @@
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/materialCardView"
+                app:layout_constraintStart_toEndOf="@+id/frame_profile"
                 app:layout_constraintTop_toBottomOf="@+id/text_title"
                 tools:text="nome do usuario" />
 
@@ -141,7 +144,7 @@
                 android:layout_height="160dp"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/materialCardView" />
+                app:layout_constraintTop_toBottomOf="@id/frame_profile" />
 
 
             <TextView
@@ -219,6 +222,19 @@
 
     </androidx.core.widget.NestedScrollView>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/inter_bold"
+        android:text="Serviços:"
+        android:textColor="@color/black"
+        android:textSize="22dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
@@ -230,12 +246,14 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+
+            >
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_new_deposit"
-                android:layout_width="90dp"
-                android:layout_height="100dp"
+                android:layout_width="110dp"
+                android:layout_height="80dp"
                 app:cardCornerRadius="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -273,12 +291,12 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/transfer"
-                android:layout_width="90dp"
-                android:layout_height="100dp"
+                android:id="@+id/card_transfer"
+                android:layout_width="110dp"
+                android:layout_height="80dp"
                 app:cardCornerRadius="16dp"
-                android:layout_marginStart="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/card_receive_values"
                 app:layout_constraintStart_toEndOf="@+id/card_new_deposit"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5">
@@ -302,9 +320,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/inter_bold"
+                        android:gravity="center"
                         android:text="Tranferir"
                         android:textColor="@color/white"
-                        android:gravity="center"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
@@ -313,28 +331,29 @@
 
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
-                android:id="@+id/card_payment"
-                android:layout_width="90dp"
-                android:layout_height="100dp"
+                android:id="@+id/card_receive_values"
+                android:layout_width="110dp"
+                android:layout_height="80dp"
                 app:cardCornerRadius="16dp"
-                android:layout_marginStart="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/transfer"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/btn_receive_values"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/blue_final"
                     android:padding="10dp">
 
                     <ImageView
-                        android:id="@+id/ic_payment"
+                        android:id="@+id/image_receive_values"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_payment"
+                        android:src="@drawable/ic_pix"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:tint="@color/white" />
@@ -343,51 +362,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/inter_bold"
-                        android:text="Pagar Contas"
-                        android:textColor="@color/white"
                         android:gravity="center"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.5"
-                        app:layout_constraintStart_toStartOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_information_account"
-                android:layout_width="90dp"
-                android:layout_height="100dp"
-                app:cardCornerRadius="16dp"
-                android:layout_marginStart="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/card_payment"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.5">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/blue_final"
-                    android:padding="10dp">
-
-                    <ImageView
-                        android:id="@+id/ic_information_account"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:src="@drawable/ic_information_account"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:tint="@color/white" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/inter_bold"
-                        android:text="Conta"
+                        android:text="Receber valores"
                         android:textColor="@color/white"
-
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
@@ -396,10 +373,10 @@
 
 
             </androidx.cardview.widget.CardView>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </HorizontalScrollView>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
