--- a/app/src/main/res/layout/view_action_buttons.xml
+++ b/app/src/main/res/layout/view_action_buttons.xml
@@ -14,7 +14,7 @@
         android:gravity="center_vertical">
 
         <include
-            android:id="@+id/btn_deposit"
+            android:id="@+id/btn_search_key"
             layout="@layout/item_action_button"
             android:layout_width="90dp"
             android:layout_height="100dp"
