--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -43,6 +43,9 @@
         <action
             android:id="@+id/action_homeFragment_to_rechargeReceiptFragment"
             app:destination="@id/rechargeReceiptFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_transferFragment"
+            app:destination="@id/transferFragment" />
     </fragment>
     <navigation android:id="@+id/authentication"
         app:startDestination="@id/loginFragment">
@@ -120,7 +123,7 @@
     </fragment>
     <fragment
         android:id="@+id/transferFragment"
-        android:name="dev.airon.bankfinance.presenter.transfer.TransferFragment"
+        android:name="dev.airon.bankfinance.presenter.features.transfer.TransferFragment"
         android:label="fragment_transfer"
         tools:layout="@layout/fragment_transfer" >
         <argument
