feature: correção bug de imports e inicio de logica de transferencia pix

--- a/app/src/main/res/layout/fragment_deposit.xml
+++ b/app/src/main/res/layout/fragment_deposit.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg_deposit_receipt_top"
     android:fillViewport="true"
 
-    tools:context=".presentation.features.deposit.DepositFormFragment">
+    tools:context=".presentation.ui.features.deposit.DepositFormFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
