--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -91,14 +91,14 @@
                 android:contentDescription="QR Code"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_qrcode_placeholder"
-                app:layout_constraintBottom_toTopOf="@+id/btn_qr_code"
+                app:layout_constraintBottom_toTopOf="@+id/btn_copy_and_paste"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvTitleQRCode" />
 
             <!-- Botão (opcional, para testar geração em tempo de execução) -->
             <Button
-                android:id="@+id/btn_qr_code"
+                android:id="@+id/btn_copy_and_paste"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
