--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -8,7 +8,7 @@
     android:fillViewport="true"
     android:fitsSystemWindows="true"
     android:theme="@style/Theme.BankFinance.TelaComAppBarDiferente"
-    tools:context=".presentation.auth.recover.RecoverFragment">
+    tools:context=".presentation.ui.auth.recover.RecoverFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
