--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:fillViewport="true"
     android:fitsSystemWindows="true"
-    tools:context=".presentation.auth.register.RegisterFragment">
+    tools:context=".presentation.ui.auth.register.RegisterFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
