--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_default"
-    tools:context=".presentation.splash.SplashFragment">
+    tools:context=".presentation.ui.splash.SplashFragment">
 
 
     <ImageView
