--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -14,7 +14,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="180dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,10 +52,11 @@
             </com.google.android.material.appbar.AppBarLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
             android:layout_width="match_parent"
-            android:layout_height="690dp"
+            android:layout_height="740dp"
 
             android:background="@drawable/bg_deposit_receipt_bottom"
             android:paddingTop="16dp"
@@ -146,12 +147,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="24dp"
-                android:paddingHorizontal="10dp"
                 android:layout_marginHorizontal="24dp"
-                android:drawableStart="@drawable/ic_search"
-                android:drawableTint="@color/white"
-                android:drawablePadding="5dp"
                 android:background="@drawable/bg_button_search_key"
+                android:drawableStart="@drawable/ic_search"
+                android:drawablePadding="5dp"
+                android:drawableTint="@color/white"
+                android:paddingHorizontal="10dp"
                 android:text="Pesquisar"
                 android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
@@ -159,9 +160,9 @@
 
             <View
                 android:id="@+id/view4"
-                android:layout_width="50dp"
+                android:layout_width="35dp"
                 android:layout_height="2dp"
-                android:layout_marginStart="10dp"
+               android:layout_marginHorizontal="10dp"
                 android:background="@color/color_card_secondary"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_search_key"
                 app:layout_constraintEnd_toStartOf="@+id/textView3"
@@ -183,8 +184,9 @@
 
             <View
                 android:id="@+id/view5"
-                android:layout_width="50dp"
+                android:layout_width="35dp"
                 android:layout_height="2dp"
+                android:layout_marginHorizontal="10dp"
                 android:background="@color/blue_final"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_qr_code"
                 app:layout_constraintEnd_toStartOf="@+id/btn_qr_code"
